src/response/snapshots/delta_sharing_server__response__parquet__test__build_file_parquet_line.snap
---
source: src/response/parquet.rs
expression: line
---
{
  "file": {
    "url": "key.snappy.parquet",
    "id": "0d166c1994fcdd317b5f18e2cfab52a0",
    "partitionValues": {
      "date": "2021-04-28"
    },
    "size": 573,
    "stats": "{\"numRecords\":1}",
    "version": 1,
    "timestamp": 1619824428000,
    "expirationTimestamp": 1619824430000
  }
}
