src/response/snapshots/delta_sharing_server__response__parquet__test__build_protocol_parquet_line.snap
---
source: src/response/parquet.rs
expression: line
---
{
  "protocol": {
    "minReaderVersion": 1
  }
}
