src/response/snapshots/delta_sharing_server__response__parquet__test__file_parquet_line.snap
---
source: src/response/parquet.rs
expression: line
---
{
  "file": {
    "url": "https://bucket/key?sig=foo",
    "id": "e4250277491e245118e0d72a3287d385",
    "paritionValues": {
      "date": "2021-04-28"
    },
    "size": 573,
    "stats": "{\"numRecords\":1}",
    "version": 1,
    "timestamp": 1619824428000,
    "expirationTimestamp": 1619824430000
  }
}
